--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A clean architecture cloud api",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll --env=node --detectOpenHandles"
+    "test": "jest --watchAll --ci --env=node"
   },
   "repository": {
     "type": "git",
@@ -22,11 +22,9 @@
     "@firebase/rules-unit-testing": "^1.1.7",
     "dotenv": "^8.2.0",
     "email-validator": "^2.0.4",
-    "esm": "^3.2.25",
     "faker": "^5.1.0",
     "firebase-admin": "^9.4.2",
     "is-ip": "^3.1.0",
-    "nnode": "^0.3.3",
     "sanitize-html": "^2.3.0"
   },
   "devDependencies": {
