--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - 14
 before_install:
-  - "curl -sL firebase.tools | bash"
+  - "npm install -g firebase-tools"
   - "npm install jest-cli --global"
 install:
   - "npm install"
